<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".question_bank">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_question_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="@string/questionBank"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/menu_btn"
                android:layout_width="37dp"
                android:layout_height="28dp"
                android:layout_marginEnd="150dp"
                android:background="@drawable/menu"
                app:layout_constraintBottom_toBottomOf="@+id/text_question_bank"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.298"
                app:layout_constraintStart_toEndOf="@+id/text_question_bank"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:constraint_referenced_ids="semester1,semester2,semester3,semester4,semester5,semester6"
                app:flow_horizontalGap="@dimen/_3sdp"
                app:flow_maxElementsWrap="2"
                app:flow_verticalGap="@dimen/_5sdp"
                app:flow_wrapMode="aligned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_question_bank" />

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/semester1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:neumorph_backgroundColor="@color/background"
                app:neumorph_shadowColorDark="@color/dark_shadow"
                app:neumorph_shadowColorLight="@color/light_shadow"
                app:neumorph_shadowElevation="@dimen/_5sdp"
                app:neumorph_shapeAppearance="@style/NeumorphismCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/sem1_img"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_25ssp"
                        android:src="@drawable/sem1"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/sem1"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/subtext_cardview"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/semester2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:neumorph_backgroundColor="@color/background"
                app:neumorph_shadowColorDark="@color/dark_shadow"
                app:neumorph_shadowColorLight="@color/light_shadow"
                app:neumorph_shadowElevation="@dimen/_5sdp"
                app:neumorph_shapeAppearance="@style/NeumorphismCard"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/sy_img"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_25ssp"
                        android:src="@drawable/sem2"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/sem2"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/subtext_cardview"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/semester3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:neumorph_backgroundColor="@color/background"
                app:neumorph_shadowColorDark="@color/dark_shadow"
                app:neumorph_shadowColorLight="@color/light_shadow"
                app:neumorph_shadowElevation="@dimen/_5sdp"
                app:neumorph_shapeAppearance="@style/NeumorphismCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/rb_img"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_25ssp"
                        android:src="@drawable/sem3"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/sem3"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/subtext_cardview"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/semester4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:neumorph_backgroundColor="@color/background"
                app:neumorph_shadowColorDark="@color/dark_shadow"
                app:neumorph_shadowColorLight="@color/light_shadow"
                app:neumorph_shadowElevation="@dimen/_5sdp"
                app:neumorph_shapeAppearance="@style/NeumorphismCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/notes_img"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_30ssp"
                        android:src="@drawable/sem4"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/sem4"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/subtext_cardview"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/semester5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:neumorph_backgroundColor="@color/background"
                app:neumorph_shadowColorDark="@color/dark_shadow"
                app:neumorph_shadowColorLight="@color/light_shadow"
                app:neumorph_shadowElevation="@dimen/_5sdp"
                app:neumorph_shapeAppearance="@style/NeumorphismCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/lr_img"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_30ssp"
                        android:src="@drawable/sem5"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/sem5"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/subtext_cardview"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/semester6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:neumorph_backgroundColor="@color/background"
                app:neumorph_shadowColorDark="@color/dark_shadow"
                app:neumorph_shadowColorLight="@color/light_shadow"
                app:neumorph_shadowElevation="@dimen/_5sdp"
                app:neumorph_shapeAppearance="@style/NeumorphismCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/video_lib_img"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_35ssp"
                        android:src="@drawable/sem6"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/sem6"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/subtext_cardview"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>
            </soup.neumorphism.NeumorphCardView>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>